<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/contactFragment"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/twenty_dp"
        android:padding="@dimen/twenty_dp"
        tools:context=".ContactFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:text="@string/how_can_we_help"
            style="@style/TextAppearance.MaterialComponents.Body1" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:hint="@string/contact_form_first_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:hint="@string/contact_form_last_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:hint="@string/contact_form_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/your_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:hint="@string/contact_form_subject"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/your_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailSubject"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:hint="@string/contact_form_message"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/your_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/post_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/seventy_dp"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_gravity="center"
            android:text="@string/contact_form_button"
            android:textColor="@android:color/white"
            android:textAllCaps="true" />

    </LinearLayout>
</ScrollView>
