<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ourExpertsFragment"
    tools:context=".OurExpertsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/our_experts_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>